# basecoat-rewrite

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  build.rs
src/: main.rs
src/api/: mod.rs
src/cli/: base.rs  colorant.rs  formula.rs  mod.rs  organization.rs  service.rs  user.rs
src/conf/: api.rs  cli.rs  default_api_config.toml  mod.rs
src/frontend/: Cargo.toml  build.rs  index.html  main.rs  mod.rs  package-lock.json  package.json  tailwind-generated.css  tailwind.config.js
src/frontend/components/: footer.rs  login.rs  mod.rs
src/frontend/proto/: proto.rs
src/frontend/public/: index.html
src/frontend/src/: App.svelte  basecoat_grpc_web_pb.js  basecoat_message_pb.js  basecoat_transport_pb.js  client.js  store.js
src/frontend/src/components/: Footer.svelte  Login.svelte
src/frontend/src/proto/: basecoat_grpc_web_pb.js  basecoat_message_pb.js  basecoat_pb.js  basecoat_transport_pb.js
src/models/: mod.rs
src/proto/: basecoat.proto  basecoat.rs  basecoat_message.proto  basecoat_message.rs  basecoat_transport.proto  basecoat_transport.rs  from.rs  mod.rs  proto.rs
src/storage/: accounts.rs  api_tokens.rs  bases.rs  colorants.rs  contractors.rs  formulas.rs  jobs.rs  mod.rs  organizations.rs  users.rs
src/storage/migrations/: 0_init.sql
