[package]
name = "basecoat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
config = "0.13.0"
protobuf = "2.27.1"
prost = "0.10.0"
serde = "1.0.136"
rust-embed = "6.3.0"
typetag = "0.1"                                                       # Allow us to deserialize trait objects
tonic = "0.7.1"
tonic-reflection = "0.4.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.7.0"
